# entativa-platforms

./: -  ABSOLUTE_FINAL_PROJECT_STATUS.md  ACTIVITY_SCREENS_COMPLETE.md  ADVANCED_FEATURES_GUIDE.md  ALL_FEATURES_COMPLETE_SUMMARY.md  ALL_FEATURES_STATUS.md  ANDROID_COMPLETION_FINAL.md  AUTH_README.md  AUTH_SCREENS_IMPLEMENTATION.md  AUTH_SYSTEM_COMPLETE.md  BEAST_CONQUERED.md  BUILD_VERIFICATION_REPORT.md  COMPLETE_AUTH_IMPLEMENTATION.md  COMPLETE_FEATURES_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  CREATE_POST_COMPLETE.md  DEPLOYMENT_COMPLETE.txt  DEPLOYMENT_GUIDE.md  E2EE_MESSAGING_COMPLETE.md  ENHANCED_DEPLOYMENT_COMPLETE.txt  ENTERPRISE_READY_SUMMARY.md  EXPLORE_COMPLETE_SUMMARY.md  FINAL_CHECKLIST.md  FINAL_DELIVERY_PRODUCTION.md  FINAL_LAUNCH_AUDIT.md  FINAL_PROJECT_COMPLETE.md  FINAL_SESSION_SUMMARY.md  FINAL_SUMMARY.txt  FOUNDER.md  FOUNDER_ADMIN_SYSTEM_COMPLETE.md  HOME_AND_TAKES_COMPLETE.md  HONEST_IMPLEMENTATION_STATUS.md  ICON_ASSETS.md  IMPLEMENTATION_COMPLETE.md  LAUNCH_READY_FINAL_TOUCHES.md  MEDIA_SERVICES_COMPLETE.md  MEDIA_SERVICES_DELIVERY.md  MEDIA_SERVICES_FINAL_STATUS.md  MEDIA_SERVICE_COMPLETION_GUIDE.md  MEDIA_SERVICE_IMPLEMENTATION_STATUS.md  (+46 more)
EntativaAndroid/app/: build.gradle
EntativaBackend/: Makefile
EntativaBackend/api-gateway/: .env.example
EntativaBackend/infrastructure/docker/: Dockerfile.go  Dockerfile.python
EntativaBackend/infrastructure/kubernetes/: deployment.yaml
EntativaBackend/proto/: event.proto  messaging.proto  user.proto
EntativaBackend/scripts/: run-migrations.sh
EntativaiOS/Coordinators/: AuthCoordinator.swift
EntativaiOS/Design/: ColorSystem.swift  Typography.swift
EntativaiOS/Managers/: AdminManager.swift
EntativaiOS/Models/: Post.swift
EntativaiOS/ViewModels/: AuthViewModel.swift
SocialinkBackend/: docker-compose.yml
SocialinkBackend/api-gateway/: README.md  go.mod  go.sum
SocialinkBackend/proto/: post.proto  settings.proto
SocialinkBackend/scripts/: init-databases.sql
SocialinkBackend/services/messaging-service/: .env.example  Cargo.toml  README.md
SocialinkBackend/services/messaging-service/src/: main.rs
SocialinkBackend/services/messaging-service/src/models/: keys.rs
VignetteAndroid/app/: build.gradle
VignetteBackend/: Makefile  README_INFRASTRUCTURE.md  docker-compose.yml
VignetteBackend/api-gateway/: .env.example  README.md  go.mod
VignetteBackend/proto/: messaging.proto  post.proto  settings.proto  user.proto
VignetteBackend/scripts/: build-all.sh  run-migrations.sh
VignetteBackend/services/media-service/: Cargo.toml  README.md
VignetteBackend/services/media-service/assets/fonts/: README.md
VignetteBackend/services/media-service/proto/: media_service.proto
VignetteBackend/services/media-service/src/: config.rs  main.rs
VignetteBackend/services/media-service/src/handlers/: processing.rs
VignetteBackend/services/media-service/src/services/: ar_filter_service.rs  audio_processor.rs  filter_service.rs  mod.rs  thumbnail_generator.rs  video_processor.rs
VignetteBackend/services/media-service/src/storage/: cdn_manager.rs  mod.rs
VignetteBackend/services/media-service/src/utils/: validation.rs
VignetteiOS/Coordinators/: AuthCoordinator.swift
VignetteiOS/Design/: ColorSystem.swift  Typography.swift
VignetteiOS/Services/: AuthAPIClient.swift  CrossPlatformAuthClient.swift
VignetteiOS/ViewModels/: VignetteAuthViewModel.swift
docs/: BEAST_CONQUERED.md  BUILD_VERIFICATION_REPORT.md  ENTATIVA_VS_FACEBOOK_POLICY.md  FINAL_DELIVERY_PRODUCTION.md  FINAL_SESSION_SUMMARY.md  FINAL_SUMMARY.txt  GRPC_INTEGRATION_COMPLETE.md  MEDIA_SERVICES_DELIVERY.md  MESSAGING_SERVICES_COMPLETE.md  MESSAGING_SERVICE_COMPLETE.md  MESSAGING_SERVICE_PROGRESS.md  NOTIFICATION_SERVICE_COMPLETE.md  POSTING_SERVICES_COMPLETE.md  PROFILE_MANAGEMENT_IMPLEMENTATION.md  QUICK_INTEGRATION_GUIDE.md  QUICK_SETUP_PRODUCTION.md  QUICK_START_GUIDE.md  README_SERVICES_COMPLETE.md  SEARCH_SERVICE_SUMMARY.md  TAKES_SYSTEM_COMPLETE.md  ULTIMATE_FINAL_SESSION_SUMMARY.md  ULTIMATE_SESSION_SUMMARY.md
infrastructure/secrets/: vault-setup.sh
tools/: generate_assets.py  normalize_icons.py  optimize_svgs.py  rename_entativa.py
(+736 files in other folders)
