[package]
name = "socialink-messaging-service"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
actix-multipart = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Cryptography - libsignal
libsignal-protocol = "0.1"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"
curve25519-dalek = "4.1"

# MLS (Messaging Layer Security) for groups
# openmls = "0.5"
# openmls_rust_crypto = "0.2"
# We'll use a custom implementation for now

# Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"

# WebSocket
actix-ws = "0.2"
actix-web-actors = "4.2"

# gRPC
tonic = "0.10"
prost = "0.12"

# Kafka (for events)
rdkafka = { version = "0.35", features = ["tokio"] }

# Base64
base64 = "0.21"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
actix-web-test = "0.1"
