[package]
name = "vignette-media-service"
version = "1.0.0"
edition = "2021"
authors = ["Entativa Engineering Team"]

[dependencies]
# Web Framework
actix-web = "4.4"
actix-multipart = "0.6"
actix-cors = "0.7"
actix-rt = "2.9"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Database & Caching
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Object Storage
aws-sdk-s3 = "1.13"
aws-config = "1.1"
aws-credential-types = "1.1"
minio = "0.1"

# Image Processing
image = { version = "0.24", features = ["png", "jpeg", "gif", "webp", "tiff"] }
imageproc = "0.23"
fast_image_resize = "3.0"
ab_glyph = "0.2"
blurhash = "0.2"
kmeans_colors = "0.5"
palette = "0.7"

# Video Processing
ffmpeg-next = "6.0"
gstreamer = "0.21"
gstreamer-video = "0.21"
opencv = { version = "0.88", default-features = false }

# Audio Processing
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"

# Metadata Extraction
exif = "0.6"
id3 = "1.12"
mp4parse = "0.17"

# Compression
flate2 = "1.0"
brotli = "3.4"
zstd = "0.13"

# Cryptography & Hashing
sha2 = "0.10"
blake3 = "1.5"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }
mime = "0.3"
mime_guess = "2.0"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
prometheus = "0.13"

# Configuration
config = "0.13"
dotenv = "0.15"
envy = "0.4"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
bytes = "1.5"
tempfile = "3.8"
walkdir = "2.4"
rayon = "1.8"
num_cpus = "1.16"
once_cell = "1.19"

# CDN & HTTP Client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
url = "2.5"

# Rate Limiting
governor = "0.6"

[dev-dependencies]
actix-test = "0.1"
mockito = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
